fixed many layout issues

--- a/front-end/src/layouts/layout.css
+++ b/front-end/src/layouts/layout.css
@@ -904,6 +904,7 @@ button:focus {
 .blog-post .image  {
   width: 300px;   
   max-width: 300px;
+  min-width: 280px;
   height: auto; 
   overflow: hidden; 
 }
@@ -912,13 +913,13 @@ button:focus {
   width: 100%;
   height: 100%; 
   object-fit: cover;
-  transition: all 1s ease-in-out;
+  transition: all 0.5s !important;
 }
 
 .blog-post .image img:hover {
   transform: scale(1.05);
   object-fit: cover;
-  transition: all 1s ease-in-out; 
+  transition: all 0.5s !important; 
 }
 
 .blog-post .category {
@@ -1193,6 +1194,7 @@ button:focus {
 
   .page .markdown-container {
     padding: 1em 1em;
+    padding-bottom: 5em;
     font-size: 1rem;
   }
 
@@ -1315,9 +1317,10 @@ button:focus {
   .about-section-inner {
     grid-template-columns: 1fr; 
     height: fit-content;
-    text-align: left;
+    text-align: left; 
     margin: 0.5em;
     padding: 0.5em;
+    padding-bottom: 7em;
     line-height: 1.5em;
     word-spacing: 0.1em;
   }
